--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "raw-loader": "^4.0.1",
