--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
     "whois-json": "^2.0.4"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5"
   }
 }
