--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-starter",
-  "version": "0.3.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,16 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.4",
+    "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "querystring": "^0.2.0",
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
-    "whois-json": "^2.0.4"
-  },
-  "devDependencies": {
-    "prettier": "2.0.5"
+    "react-syntax-highlighter": "^13.2.1",
+    "reading-time": "^1.2.0",
+    "spotify-web-api-node": "^4.0.0",
+    "swr": "^0.2.3"
   }
 }
