--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,9 @@
 {
-    "name": "Puuwto",
-    "short_name": "Puuwto",
-    "icons": [
-      {
-        "src": "/icons/android-chrome-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/icons/icon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "theme_color": "#FFFFFF",
-    "background_color": "#FFFFFF",
-    "start_url": "/",
-    "display": "standalone",
-    "orientation": "portrait"
-  }
+  "name": "Blog",
+  "short_name": "Blog",
+  "description": "Blog.",
+  "orientation": "Blog",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "status": "ok"
+}
