--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "next-cookies": "^2.0.3",
+    "prismjs": "^1.21.0",
     "querystring": "^0.2.0",
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
