--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.3.5",
+    "next": "^10.0.0",
     "next-cookies": "^2.0.3",
     "prismjs": "^1.21.0",
     "querystring": "^0.2.0",
