--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
+  "name": "puuwto",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^10.0.0",
-    "next-cookies": "^2.0.3",
-    "node-fetch": "^2.6.1",
-    "prismjs": "^1.21.0",
-    "querystring": "^0.2.0",
-    "raw-loader": "^4.0.1",
-    "react": "16.13.1",
-    "react-cookie": "^4.0.3",
-    "react-dom": "16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-syntax-highlighter": "^13.2.1",
-    "reading-time": "^1.2.0",
-    "spotify-web-api-node": "^4.0.0",
-    "swr": "^0.2.3"
+    "classnames": "^2.3.1",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.10",
+    "next-seo": "^5.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.16",
+    "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19",
+    "typescript": "4.5.5"
   }
 }
