--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.1.6",
     "next": "12.0.10",
     "next-seo": "^5.1.0",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
